# blog_app

./: db.sqlite3  pyproject.toml  requirements.txt
blog/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_userprofile_full_name_userprofile_google_id.py
blog/templates/blog/: account_settings.html  base.html  blog_detail.html  home.html  login.html  register.html
blog_app/: settings.py  urls.py
static/: carousel.js
