[project]
name = "blog-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2025.8.3",
    "cffi==2.0.0",
    "charset-normalizer==3.4.3",
    "cryptography==46.0.2",
    "django==5.2.1",
    "django-allauth==65.11.2",
    "idna==3.10",
    "pillow==11.2.1",
    "pycparser==2.23",
    "pyjwt==2.10.1",
    "requests==2.32.5",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "urllib3==2.5.0",
]
